# t-engine

./: .gitignore  README.md  payment_engine.py
testing/: expected.csv  generator_deposit.py  generator_happy_flows.py  generator_max_u32.py  transactions.csv
tr-engine/: Cargo.toml
tr-engine/src/: account.rs  input.rs  main.rs  main2.rs  tests.rs
