[package]
name = "tr-engine"
version = "0.1.0"
edition = "2021"
authors = ["Cristian Vlaescu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
polars = {version = "0.17.0", features = ["pretty_fmt"]}
log = "0.4.14"
env_logger = "0.9.0"