[package]
name = "tr-engine"
version = "0.1.0"
edition = "2021"
authors = ["Cristian Vlaescu"]

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"

#[dev-dependencies]
#criterion = "0.3.5"
#
#[[bench]]
#name = "my_benchmark"
#harness = false

[profile.dev]
opt-level = 3
